Add rendering of days of the month and basic flex styling to display on screen

--- a/fithub-frontend/src/components/activity-graph/components/month/Month.module.css
+++ b/fithub-frontend/src/components/activity-graph/components/month/Month.module.css
@@ -2,3 +2,9 @@
     font-size: large;
     padding: 4px;
 }
+
+.monthContainer {
+    display: flex;
+    flex-direction: row;
+    padding-right: 4px;
+}
