--- a/fithub-frontend/src/components/activity-graph/ActivityGraph.module.css
+++ b/fithub-frontend/src/components/activity-graph/ActivityGraph.module.css
@@ -1,3 +1,8 @@
+.graphContainer {
+    display: flex;
+    flex-direction: column;
+}
+
 .monthsContainer {
     display: flex;
     flex-direction: row;
