Add blocks in their basic form

--- a/fithub-frontend/src/components/activity-graph/components/month/Month.module.css
+++ b/fithub-frontend/src/components/activity-graph/components/month/Month.module.css
@@ -1,9 +1,12 @@
-.month {
-    font-size: large;
+.monthContainer {
     padding: 4px;
 }
 
-.monthContainer {
+.month {
+    font-size: smaller;
+}
+
+.weeksContainer {
     display: flex;
     flex-direction: row;
     padding-right: 4px;
