--- a/fithub-frontend/src/components/activity-graph/components/month/components/week/components/day/Day.module.css
+++ b/fithub-frontend/src/components/activity-graph/components/month/components/week/components/day/Day.module.css
@@ -4,10 +4,15 @@
     background-color: #ebedf0;
     outline: 1px solid lightgray;
     border-radius: 12%;
-    margin-bottom: 4px;
+    margin-bottom: 5px;
 }
 
 .active {
-    background-color: lightgreen;
-    outline: 1px solid darkgreen;
+    background-color: rgb(160, 232, 160);
+    outline: 1px solid rgb(86, 162, 86);
+}
+
+.currentDay {
+    background-color: rgb(160, 232, 160);
+    outline: 1px solid rgb(86, 162, 86);
 }
