--- a/fithub-frontend/src/components/activity-graph/components/month/Month.module.css
+++ b/fithub-frontend/src/components/activity-graph/components/month/Month.module.css
@@ -1,9 +1,10 @@
 .monthContainer {
-    padding: 4px;
+    padding: 0 4px;
 }
 
 .month {
     font-size: smaller;
+    margin-bottom: 2px;
 }
 
 .weeksContainer {
